# frank

./: .blog-craft.yaml  .gitignore  .sops.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  InitialPlan.md  README.md  frank-cluster.code-workspace  package-lock.json  pyproject.toml
.claude/: agents  hookify.warn-hextra-weight-zero.local.md  launch.json  settings.json  settings.local.json
.devcontainer/: fr-profiles.yaml  vk-profiles.yaml
.githooks/: pre-commit
.reference-pool/: README.md
agents/: browser-harness-mac.md
apps/ai-alert-helper/src/: Dockerfile  pyproject.toml
apps/ai-alert-helper/src/ai_alert_helper/: __init__.py  ai_adapter.py  analyst.py  api.py  commands.py  facts.py  poller.py  surge.py  telegram.py  tools.py
apps/ai-alert-helper/src/ai_alert_helper/prompts/: digest.txt  investigate-generic.txt  investigate-surge.txt
apps/ai-alert-helper/src/tests/: conftest.py  test_ai_adapter.py  test_analyst.py  test_api.py  test_commands.py  test_facts.py  test_poller.py  test_surge.py  test_tools.py
blog/: .gitignore  .hookify.warn-hextra-weight-zero.md  Dockerfile  MEDIA-GUIDE.md  README.md  go.mod  hugo.toml  netlify.toml  prompt_for_images.yaml  prompts_for_images.md
docs/: layers.yaml
omni/: Readme.md
patches/: 01-cluster-wide-scheduling.yaml  02-cluster-wide-cni-none.yaml  03-labels-gpu-1.yaml  03-labels-mini-1.yaml  README.md
references/: access.md
scripts/: build-subject-pool.py  extract-subject.swift  generate-all-images.py  generate-image.py  migrate-frontmatter.sh  package-lock.json  package.json  paperclip-purge-fs.sh  phase5-soak-daily.sh  (+11 more)
(+2359 files in other folders)
