[project]
name = "ai-alert-helper"
version = "0.1.4"
description = "AI-enriched alert helper for Frank's blog edge observability"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",  # mocks httpx
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
